--- a/example.env
+++ b/example.env
@@ -11,5 +11,4 @@ SOCIAL_AUTH_GOOGLE_OAUTH2_KEY=very_secret_key
 SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET=very_secret_key
 SOCIAL_AUTH_FACEBOOK_KEY=very_secret_key
 SOCIAL_AUTH_FACEBOOK_SECRET=very_secret_key
-STATIC_ROOT=/src/static
-STATIC_URL=/static/
+STATIC_PATH=./data/static
