devcontainer samodejno ne požene več strežnika

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -5,3 +5,4 @@ services:
     volumes:
       - .:/workspace:cached
       - ./web:/src:cached
+    command: /bin/sh -c "while sleep 1000; do :; done"
