--- a/example.env
+++ b/example.env
@@ -6,9 +6,5 @@ POSTGRES_PASSWORD=postgres
 HTTP_PORT=8000
 ALLOWED_HOSTS=127.0.0.1
 SECRET_KEY=t2-r&t0yj0b%q$b^@ptqya=13mq0rsz1_5&h^ub-=+(ueiqsql
-DJANGO_SETTINGS_MODULE=web.settings.arnes
-SOCIAL_AUTH_GOOGLE_OAUTH2_KEY=very_secret_key
-SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET=very_secret_key
-SOCIAL_AUTH_FACEBOOK_KEY=very_secret_key
-SOCIAL_AUTH_FACEBOOK_SECRET=very_secret_key
+DJANGO_SETTINGS_MODULE=web.settings.docker
 STATIC_PATH=./data/static
