Adapt settings to Django 4

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,3 +28,4 @@ services:
       - SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET
       - SOCIAL_AUTH_FACEBOOK_KEY
       - SOCIAL_AUTH_FACEBOOK_SECRET
+      - SUBMISSION_URL
