--- a/example.env
+++ b/example.env
@@ -8,3 +8,4 @@ ALLOWED_HOSTS=127.0.0.1
 SECRET_KEY=t2-r&t0yj0b%q$b^@ptqya=13mq0rsz1_5&h^ub-=+(ueiqsql
 DJANGO_SETTINGS_MODULE=web.settings.docker
 STATIC_PATH=./data/static
+SUBMISSION_URL=http://127.0.0.1:8000
